# nba-data-collection

./: .gitignore  README.md  collect.py  dashboard.py  debug_api.py  job_request.json  pyproject.toml  requirements.txt  run_pipeline.py
data/: 2020-21_Regular_players.csv  2020-21_Regular_teams.csv  2021-22_Regular_players.csv  2021-22_Regular_teams.csv  2022-23_Regular_players.csv  2022-23_Regular_teams.csv  2023-24_Regular_players.csv  2023-24_Regular_teams.csv
patch_imports/: player_season_patch_p97.py  team_season_patch_p97.py
research/: data_quality.py  data_quality_viz.py  imputation_research.py  pace_estimate.py  rapm_import.py  reporting_bias.py
results/: gpm_results.csv  top10_history.csv
src/: cleaning.py  collection.py  config.py  features.py  gpm.py  impute.py  notify.py  patch.py  sheets.py  validate.py
src/NBA_Game_Plus_Minus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_collection.py
